--- a/my-turborepo/apps/admin/src/components/Dashboard/index.css
+++ b/my-turborepo/apps/admin/src/components/Dashboard/index.css
@@ -38,3 +38,31 @@ nav ul li a {
 nav ul li a:hover {
     background-color: #ffd700;
 }
+.problem-list {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    gap: 20px;
+    margin-top: 50px;
+}
+
+.problem-item {
+    width: calc(25% - 20px);
+    padding: 20px;
+    margin-bottom: 40px;
+    border-radius: 10px;
+    cursor: pointer;
+    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.2);
+    background-color: #fff;
+}
+
+.problem-title {
+    font-size: 24px;
+    font-weight: bold;
+    color: black;
+}
+
+.problem-description {
+    margin-top: 10px;
+    color: #333;
+}
