--- a/my-turborepo/packages/ui/src/Header/styles.css
+++ b/my-turborepo/packages/ui/src/Header/styles.css
@@ -16,6 +16,7 @@ h1 {
     margin: 0;
 }
 
+/* buttons */
 nav ul {
     list-style-type: none;
     margin: 0;
@@ -37,4 +38,23 @@ nav ul li a {
 
 nav ul li a:hover {
     background-color: #ffd700;
+}
+
+/* media query fix for smaller screens/phones */
+@media (max-width: 768px) {
+    .container {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+
+    nav ul {
+        flex-direction: column;
+        margin-top: 20px;
+    }
+
+    nav ul li {
+        margin-right: 0;
+        margin-bottom: 10px;
+        margin-top: 20px;
+    }
 }
