--- a/my-turborepo/packages/ui/src/Article/styles.css
+++ b/my-turborepo/packages/ui/src/Article/styles.css
@@ -1,4 +1,3 @@
-/* ArticleComponent.css */
 .article-container {
     display: flex;
     flex-direction: column;
@@ -8,8 +7,7 @@
     padding: 20px;
     border-radius: 8px;
     max-width: 380px;
-    margin: auto;
-    margin-top: 230px;
+    margin: 230px auto auto;
 }
 
 @media (max-width: 600px) {
